--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+@import url("//fonts.googleapis.com/css2?family=Rubik&family=Space+Mono&display=swap");
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding:0;
+    font-family: "Rubik", sans-serif, serif
 }
 
 html{
@@ -18,7 +21,7 @@ body {
     scrollbar-width: none;  /* Firefox */
 }
 body {
-    font-family: 'Courier New', monospace;
+    /* font-family: 'Courier New', monospace; */
     margin: 0;
 }
 
@@ -138,6 +141,7 @@ header{
     color:rgb(3,16,28);
     font-size: 24px;
 }
+
 .part2{
     display: block;
     padding: 5px;
@@ -146,8 +150,13 @@ header{
     padding-right: 10%;
     background-color: skyblue;
     color: black;
-    text-align: center;
+    text-align: left;
     font-size: 24px;
+    
+}
+
+#projectsTitle{
+    text-align: center;
 }
 .part3{
     display: block;
