--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-@import url("//fonts.googleapis.com/css2?family=Rubik&family=Space+Mono&display=swap");
+/* @import url("//fonts.googleapis.com/css2?family=Rubik&family=Space+Mono&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding:0;
-    font-family: "Rubik", sans-serif, serif
+    /* font-family: "Rubik", sans-serif, serif */
+    font-family: 'Nunito', sans-serif;
 }
 
 html{
