--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ body {
     scrollbar-width: none;  /* Firefox */
 }
 body {
-    /* font-family: 'Courier New', monospace; */
     margin: 0;
 }
 
@@ -48,6 +47,9 @@ a {
     overflow: hidden;
 }
 
+h3{
+    font-weight: bolder;
+}
 
 header{
     display: flex;
