--- a/styles.css
+++ b/styles.css
@@ -1,200 +1,586 @@
-/* @import url("//fonts.googleapis.com/css2?family=Rubik&family=Space+Mono&display=swap"); */
+/* #2C3333 #395B64 #A5C9CA #E7F6F2 */
+
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    padding: 0;
     margin: 0;
-    padding:0;
-    /* font-family: "Rubik", sans-serif, serif */
-    font-family: 'Nunito', sans-serif;
+    box-sizing: border-box;
+    font-family: "Monserrat", sans-serif;
+    font-weight: 500;
 }
 
-html{
-    scroll-behavior: smooth;
-}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
+
+::-webkit-scrollbar {
     display: none;
 }
-  
+
+html {
+    scroll-behavior: smooth;
+}
+
+
 /* Hide scrollbar for IE, Edge and Firefox */
+
 body {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
-body {
-    margin: 0;
-}
-
-.jumpPoint::before {
-	content: "";
-    display: block;
-    height: 60px;
-    margin: -60px 0 0;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+    scroll-behavior: smooth;
 }
 
-
-
-a {
-  text-decoration: none;
-  color:white;
-}
-
-.bar{
+.navbar {
     display: flex;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+    /* padding-top: 100px; */
 }
 
-h3{
+.navnav {
+    /* position: relative; */
+    position: fixed;
+    display: flex;
+    right: 0px;
+    /* left: 90%; */
+    top: 6px;
+    padding: 1em 3em;
+    margin-bottom: 50px;
+    margin-bottom: 0;
+    z-index: 1;
+}
+
+.navitems {
+    display: flex;
+    margin-left: 1.5em;
+    right: 4em;
+    text-decoration: none;
+    text-transform: uppercase;
+    /* color: #A27B5C;  */
+}
+
+.togglebutton {
+    position: fixed;
+    display: flex;
+    left: 0px;
+    /* left: 90%; */
+    top: 6px;
+    padding: 1em 3em;
+    margin-bottom: 50px;
+    margin-bottom: 0;
+    z-index: 1;
+    /* font-size: xx-large; */
+}
+
+.toggle {
+    text-decoration: none;
+    text-transform: uppercase;
+    /* font-size: 50%; */
+    /* color: #DCD7C9; */
+    color: #2C3333;
+    background-color: #2C3333;
+    padding: 15px;
+    border-radius: 50px;
+    text-transform: none;
+    background-color: #395B64;
+    color: white;
+    font-size: 150%;
+    border: 0;
+    cursor: pointer;
+}
+
+li {
+    list-style: none;
+    transition: all 0.4s;
+    /* margin-left: 1.5em; */
+    margin-left: .8em;
+    font-size: large;
+    text-decoration: none;
+    /* text-transform: uppercase; */
+    text-transform: none;
+}
+
+.navitems li:hover {
+    transform: scale(1.3);
+    color: white;
+}
+
+.toggle li:hover {
+    transform: scale(1.3);
+    color: white;
+}
+
+.navitems a {
+    text-decoration: none;
+    text-transform: uppercase;
+    /* color: #DCD7C9; */
+    color: #E7F6F2;
+    background-color: #2C3333;
+    padding: 10px;
+    border-radius: 30px;
+    text-transform: none;
+}
+
+.navitems li:hover {
+    transform: scale(1.3);
+    color: white;
+}
+
+#homelink {
+    text-decoration: underline;
+}
+
+#projectlink {
+    text-decoration: underline;
+}
+
+#skillslink {
+    text-decoration: underline;
+}
+
+#servicelink {
+    text-decoration: underline;
+}
+
+body {
+    /* background-color: #3F4E4F; */
+    background-color: #2C3333;
+    /* color: #DCD7C9; */
+    color: #E7F6F2;
+}
+
+.main-area {
+    text-align: center;
+}
+
+.about_inner {
+    width: 400vw;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    /* margin-bottom: 100px; */
+    /* overflow-x: scroll;
+    overflow-y: hidden;
+    scroll-behavior: smooth; */
+    transform: rotate(90deg) translateY(-100vh);
+    transform-origin: top left;
+    /* padding-bottom: 100px; */
+    /* margin: 5%; */
+}
+
+.about_wrapper {
+    width: 100vh;
+    height: 100vw;
+    color: #E7F6F2;
+    display: flex;
+    flex-direction: row;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    transform: rotate(-90deg) translateX(-90vh);
+    transform-origin: top left;
+    position: absolute;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    /* justify-content: center; */
+}
+
+.infopanel::before {
+    content: "";
+    display: block;
+    height: 100px;
+    margin: -100px 0 0;
+}
+
+.aboutpanel {
+    flex: 1;
+    /* margin: 150px; */
+    /* margin-left: 50px;
+    margin-right: 50px; */
+    margin: 120px 50px 0px;
+    font-size: 30px;
+    padding: 50px;
+    border-radius: 50px;
+    background-color: transparent;
+    width: 100vw;
+    /* text-align: center; */
+    justify-content: center;
+    /* margin-top: 5%; */
+}
+
+.intro {
+    /* font-size: xxx-large;
+    letter-spacing: 3px;
+    color: #E7F6F2;
+    height: 800px;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    padding-bottom: 100px;
+    padding-top: 100px;
+    flex-direction: column;
+    text-align: center;
+    margin: 0px 0px 100px; */
+    justify-content: center;
+    text-align: center;
+    margin-top: 15%;
+    font-size: 120%;
+}
+
+#welcome {
+    font-size: 80px;
+}
+
+#tamu {
+    color: #500000;
+    color: #d6564d;
+    text-decoration: none;
     font-weight: bolder;
 }
 
-header{
-    display: flex;
-    position: fixed;
-    width: 100%;
-    font-size: 20px;
-    padding: 5px;
-    background-color:rgb(3,16,28); /* haha nice*/
-    color: white;
-    justify-content: flex-end;
+.main-area {
+    margin: 5%;
+    font-size: 28px;
 }
 
-#myNameOnHeader {
-    flex: 1;
-    font-size: 45px;
-    margin: 0%;
-    display: inline-block;
-    justify-content: center;
-    padding-top: 0px; 
-    padding-bottom: 0px;
-    padding-left: 20px;
-}
-/* header li{
-    display: flex;
-    flex: 1;
-} */
-
-.site-navigation {
-    display: inline-block;
-    flex: 1;
-    margin: 0; 
-    padding: 0;
-    list-style: none;
-}
-
-#navbar{
-    list-style: none;
-    justify-content: right;
-    /* padding: 22px; */
-    padding-top: 15px;
-    display: flex;
-    margin: 0;
-    padding-right: 10px;
-    margin-right: 10px;
-
-}
-#about{
-    padding-right: 30px;
-}
-#projects{
-    padding-right: 30px;
-}
-#contact{
-    padding-right: 0px;
-} 
-
-#navbar li a{
-    transition: all 0.25s ease 0s;
-}
-#navbar li a:hover{
-    color: lightskyblue;
-}
-
-/* Main Content*/
-.bodyArea{
-    color: white;
-    margin-top: 50px;
-    display: flex;
-}
-
-.introduction{
-    background-image: url(xwing-bg.jpeg);
-    /* background-position: 0px 0px; */
-    background-position: top center;
-    /* background-size: 100%; */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    font-size: 25px;
+#part1id {
+    /* background-color: #2C3639; */
+    background-color: #395B64;
+    padding: 50px;
     padding-top: 20px;
-    display: block;
-    background-color: transparent;
+    border-radius: 50px;
+    /* margin: 50px; */
+    margin-top: 2%;
     text-align: center;
-    width: 100%;
+}
+
+#aboutmeid {
+    text-align: center;
+}
+
+.pics {
+    display: flex;
+    /* align-items: center; */
+    /* flex-direction: column; */
+    width: 50%;
+    height: 50%;
     align-content: center;
-    justify-content: center;
-    padding-bottom: 40%;
+    /* size: 50%; */
+    /* margin-top: 5%; */
 }
 
-.part1{
+.pics img {
+    border-radius: 50px;
+    size: 10%;
+    margin-left: 50%;
+    margin-top: 3%;
+    width: 100%;
+    height: 100%;
+}
+
+.footer {
+    /* margin-right: 20%; */
+    background-color: #395B64;
+    padding: 3%;
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    display: block;
-    padding: 10px;
-    padding-bottom: 30px;
-    padding-left: 10%;
-    padding-right: 10%;
-    background-color: rgb(232, 242, 157);
-    color:rgb(3,16,28);
-    font-size: 24px;
+    /* margin: auto; */
+    align-items: center;
+    justify-content: center;
+    margin-top: 3%;
+    border-radius: 50px;
+    font-size: 100%;
+    width: 100%;
+    /* padding: 15%; */
+    margin: 0;
 }
 
-.part2{
+.footerlist {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footerlist li {
+    padding: 5%;
+    margin: 0 !important;
+}
+
+.contactli {
+    width: 40%;
+    margin: 5%;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
+
+#contactme {
+    font-size: 120%;
+    margin-bottom: 5%;
+}
+
+#linked {
+    text-decoration: underline;
+}
+
+.projectsbody {
     display: block;
     padding: 5px;
     padding-bottom: 30px;
     padding-left: 10%;
     padding-right: 10%;
-    background-color: skyblue;
-    color: black;
     text-align: left;
     font-size: 24px;
-    
 }
 
-#projectsTitle{
+#projectstitle {
+    margin: auto;
     text-align: center;
-    color: black;
+    font-size: 50px;
 }
-.part3{
+
+#skillstitle {
+    margin: auto;
+    text-align: center;
+    font-size: 50px;
+}
+
+#servicetitle {
+    margin: auto;
+    margin-top: 2%;
+    text-align: center;
+    font-size: 50px;
+}
+
+.desc {
+    /* background-color: #2C3639; */
+    background-color: #395B64;
+    padding: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 45px;
+    margin: 25px;
+}
+
+.skillsbody {
+    margin: auto;
+    text-align: center;
+    font-size: xx-large;
+    /* text-decoration: none; */
+}
+
+#resume {
+    text-decoration: none;
+    color: #E7F6F2;
+    font-size: large;
+}
+
+.languages {
+    text-transform: none;
+}
+
+.plangs {
+    background-color: #395B64;
+    display: flex;
+    flex-direction: row;
+    margin: 0% 10% 30px;
+    padding: 35px;
+    text-align: center;
+    border-radius: 100px;
+    font-size: xx-small;
+}
+
+.elangs {
+    background-color: #395B64;
+    /* display: flex; */
+    /* flex-direction: row; */
+    margin: 0% 10% 30px;
+    padding: 35px;
+    border-radius: 100px;
+}
+
+.tools {
+    background-color: #395B64;
+    display: flex;
+    flex-direction: row;
+    margin: 0% 10% 30px;
+    padding: 35px;
+    text-align: center;
+    border-radius: 100px;
+    font-size: xx-small;
+}
+
+#langdesc1 {
+    text-align: left;
+    margin-left: 15%;
+}
+
+#langdesc2 {
+    text-align: left;
+    margin-left: 15%;
+}
+
+#langdesc3 {
+    text-align: left;
+    margin-left: 15%;
+}
+
+.lang {
+    flex: 1;
+}
+
+.plangs li {
+    font-size: 60px;
+    text-transform: none;
+}
+
+.elangs li {
+    font-size: 40px;
+    text-transform: none;
+}
+
+#tophalf {
+    display: flex;
+    flex-direction: row;
+}
+
+#tophalf li {
+    flex: 1;
+    margin-bottom: 20px;
+}
+
+#bottomhalf {
+    display: flex;
+    flex-direction: row;
+}
+
+#bottomhalf li {
+    flex: 1;
+}
+
+.tools li {
+    font-size: 40px;
+    text-transform: none;
+}
+
+#servicebody {
+    margin: 2% 10% 2%;
+    background-color: #395B64;
+    padding: 20px;
+    padding-top: 15px;
+    border-radius: 25px;
+    font-size: 20px;
+    /* change  */
+}
+
+.hor_wrapper {
+    width: 500vw;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    /* margin-bottom: 100px; */
+    /* overflow-x: scroll;
+    overflow-y: hidden;
+    scroll-behavior: smooth; */
+    transform: rotate(90deg) translateY(-100vh);
+    transform-origin: top left;
+    /* padding-bottom: 100px; */
+    /* margin: 5%; */
+}
+
+.hor_bodyarea {
+    width: 80vh;
+    height: 100vw;
+    color: #E7F6F2;
+    display: flex;
+    flex-direction: row;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    transform: rotate(-90deg) translateX(-90vh);
+    transform-origin: top left;
+    position: absolute;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.infopanel::before {
+    content: "";
     display: block;
-    padding-bottom: 80px;
-    padding-left: 10%;
-    padding-right: 10%;
-    background-color: rgb(232, 242, 157);
-    color:rgb(3,16,28);
-    text-align: center;
-    font-size: 24px;
+    height: 100px;
+    margin: -100px 0 0;
 }
 
-#email-link{
-    color:darkblue;
-}
-#linkedinLink{
-    color:darkblue;
-}
-#githubLink{
-    color:darkblue;
+.infopanel {
+    flex: 1;
+    /* margin: 150px; */
+    /* margin-left: 50px;
+    margin-right: 50px; */
+    margin: 120px 50px 0px;
+    font-size: 30px;
+    padding: 50px;
+    border-radius: 50px;
+    background-color: transparent;
+    /* text-align: center; */
 }
 
-.credits{
-    background-color:rgb(3,16,28);
-    text-align: center;
-    color: white;   
-    font-size: 12px;
+#part1 {
+    /* background-color: #395B64; */
+    background-color: transparent;
+    width: 100vw;
+    /* padding: 40px; */
 }
-#cred-link{
-    color:skyblue;
+
+#part2 {
+    /* background-color: #395B64; */
+    width: 100vw;
+}
+
+#part3 {
+    /* background-color: #395B64; */
+    width: 100vw;
+}
+
+#part4 {
+    /* background-color: #395B64; */
+    width: 100vw;
+}
+
+#part5 {
+    /* background-color: #395B64; */
+    width: 100vw;
+}
+
+#githublink {
+    color: #A5C9CA;
+}
+
+#impactlink {
+    /* color: #A5C9CA; */
+    text-decoration: none;
+    color: #E7F6F2;
+}
+
+#revolink {
+    /* color: #A5C9CA; */
+    text-decoration: none;
+    color: #E7F6F2;
+}
+
+#namelink {
+    text-decoration: none;
+    color: #A5C9CA;
+}
+
+#MLlink {
+    text-decoration: none;
+    text-decoration: underline;
+    color: white;
 }
